Robert/229 dates for fe inc revert (#192)
* Revert "Revert "Robert/229 date upgrade (#176)" (#190)"

This reverts commit aa8f88e267f0472adc49a41f8afbcb01a2bca342.

* [229]: Configure jackson (de)serialisation to handle json timestamps as milliseconds